--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,12 @@
 * {
-  margin: 0;
   padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 
 body {
   height: 100%;
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  width: 100%;
 }
 
 header {
@@ -18,10 +14,6 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-a {
-  text-decoration: none;
 }
 
 #strip-top {
@@ -34,7 +26,7 @@ a {
   margin: 10px 0 10px 0;
   display: flex;
   justify-content: space-between;
-  width: 800px;
+  width: 894px;
   height: 47px;
 }
 #strip-center .logo-container {
@@ -58,33 +50,58 @@ nav ul {
   list-style: none;
   position: relative;
 }
-nav .sub-menu {
+nav ul > li:hover .sub-menu-1 {
+  visibility: visible;
+}
+nav .sub-menu-1,
+nav .sub-menu-2 {
+  visibility: hidden;
   z-index: 1;
   position: absolute;
   display: flex;
   flex-direction: column;
 }
-nav .sub-menu :last-child {
+nav .sub-menu-1 :last-child,
+nav .sub-menu-2 :last-child {
   left: 100%;
   top: 141px;
 }
-
-.slider-container {
-  border: 1px solid;
-  max-width: 800px;
-  position: relative;
+nav .sub-menu-1 > li:hover .sub-menu-2 {
+  visibility: visible;
 }
-.slider-container .slides {
+
+#strip-down {
+  width: 894px !important;
+  height: 290px !important;
+  /* Slideshow container */
+  /* Next & previous buttons */
+  /* Position the "next button" to the right */
+  /* On hover, add a black background color with a little bit see-through */
+  /* Caption text */
+  /* Number text (1/3 etc) */
+  /* Fading animation */
+  /* On smaller screens, decrease text size */
+}
+#strip-down .mySlides {
   display: none;
 }
-.slider-container .prev,
-.slider-container .next {
+#strip-down img {
+  width: 100%;
+  height: 290px !important;
+  vertical-align: middle;
+}
+#strip-down .slideshow-container {
+  position: relative;
+  margin: auto;
+}
+#strip-down .prev,
+#strip-down .next {
   cursor: pointer;
   position: absolute;
   top: 50%;
   width: auto;
-  margin-top: -22px;
   padding: 16px;
+  margin-top: -22px;
   color: white;
   font-weight: bold;
   font-size: 18px;
@@ -92,15 +109,15 @@ nav .sub-menu :last-child {
   border-radius: 0 3px 3px 0;
   user-select: none;
 }
-.slider-container .next {
+#strip-down .next {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
-.slider-container .prev:hover,
-.slider-container .next:hover {
+#strip-down .prev:hover,
+#strip-down .next:hover {
   background-color: rgba(0, 0, 0, 0.8);
 }
-.slider-container .text {
+#strip-down .text {
   color: #f2f2f2;
   font-size: 15px;
   padding: 8px 12px;
@@ -109,13 +126,23 @@ nav .sub-menu :last-child {
   width: 100%;
   text-align: center;
 }
-.slider-container .fade {
+#strip-down .numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+#strip-down .active,
+#strip-down .dot:hover {
+  background-color: #717171;
+}
+#strip-down .fade {
   -webkit-animation-name: fade;
   -webkit-animation-duration: 1.5s;
   animation-name: fade;
   animation-duration: 1.5s;
 }
-
 @-webkit-keyframes fade {
   from {
     opacity: 0.4;
@@ -130,5 +157,12 @@ nav .sub-menu :last-child {
   }
   to {
     opacity: 1;
+  }
+}
+@media only screen and (max-width: 300px) {
+  #strip-down .prev,
+#strip-down .next,
+#strip-down .text {
+    font-size: 11px;
   }
 }
