--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,16 +1,13 @@
 * {
-    margin: 0;
     padding: 0;
-    box-sizing: border-box
+    margin: 0;
+    box-sizing: border-box;
 }
 
 body {
     height: 100%;
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    width: 100%;
+    
 }
 
 header {
@@ -18,10 +15,6 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-
-a {
-    text-decoration: none;
 }
 
 #strip-top {
@@ -34,7 +27,7 @@ a {
     margin: 10px 0 10px 0;
     display: flex;
     justify-content: space-between;
-    width: 800px;
+    width: 894px;
     height: 47px;
 
     .logo-container {
@@ -61,9 +54,17 @@ nav {
         display: flex;
         list-style: none;
         position: relative;
+
+        >li {
+            &:hover .sub-menu-1 {
+                visibility: visible;
+            }
+        }
     }
 
-    .sub-menu {
+    .sub-menu-1,
+    .sub-menu-2 {
+        visibility: hidden;
         z-index: 1;
         position: absolute;
         display: flex;
@@ -74,25 +75,41 @@ nav {
             top: 141px;
         }
     }
+
+    .sub-menu-1>li:hover .sub-menu-2 {
+        visibility: visible;
+    }
 }
 
-.slider-container {
-    border: 1px solid;
-    max-width: 800px;
-    position: relative;
+#strip-down {
+    width: 894px !important;
+    height: 290px !important;
 
-    .slides {
-        display: none;
+    .mySlides {
+        display: none
     }
 
+    img {
+        width: 100%;
+        height: 290px !important;
+        vertical-align: middle;
+    }
+
+    /* Slideshow container */
+    .slideshow-container {
+        position: relative;
+        margin: auto;
+    }
+
+    /* Next & previous buttons */
     .prev,
     .next {
         cursor: pointer;
         position: absolute;
         top: 50%;
         width: auto;
-        margin-top: -22px;
         padding: 16px;
+        margin-top: -22px;
         color: white;
         font-weight: bold;
         font-size: 18px;
@@ -101,16 +118,19 @@ nav {
         user-select: none;
     }
 
+    /* Position the "next button" to the right */
     .next {
         right: 0;
         border-radius: 3px 0 0 3px;
     }
 
+    /* On hover, add a black background color with a little bit see-through */
     .prev:hover,
     .next:hover {
         background-color: rgba(0, 0, 0, 0.8);
     }
 
+    /* Caption text */
     .text {
         color: #f2f2f2;
         font-size: 15px;
@@ -121,33 +141,60 @@ nav {
         text-align: center;
     }
 
+    /* Number text (1/3 etc) */
+    .numbertext {
+        color: #f2f2f2;
+        font-size: 12px;
+        padding: 8px 12px;
+        position: absolute;
+        top: 0;
+    }
+
+    .active,
+    .dot:hover {
+        background-color: #717171;
+    }
+
+    /* Fading animation */
     .fade {
         -webkit-animation-name: fade;
         -webkit-animation-duration: 1.5s;
         animation-name: fade;
         animation-duration: 1.5s;
     }
+
+    @-webkit-keyframes fade {
+        from {
+            opacity: .4
+        }
+
+        to {
+            opacity: 1
+        }
+    }
+
+    @keyframes fade {
+        from {
+            opacity: .4
+        }
+
+        to {
+            opacity: 1
+        }
+    }
+
+    /* On smaller screens, decrease text size */
+    @media only screen and (max-width: 300px) {
+
+        .prev,
+        .next,
+        .text {
+            font-size: 11px
+        }
+    }
 }
 
 
 
-@-webkit-keyframes fade {
-    from {
-        opacity: .4
-    }
 
-    to {
-        opacity: 1
-    }
-}
-
-@keyframes fade {
-    from {
-        opacity: .4
-    }
-
-    to {
-        opacity: 1
-    }
-}
 
