--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,15 @@ header {
   align-items: center;
 }
 
+a {
+  text-decoration: none;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+}
+
 #strip-top {
   height: 20px;
   width: 100%;
@@ -27,18 +36,20 @@ header {
   display: flex;
   justify-content: space-between;
   width: 894px;
-  height: 47px;
+  height: 96px;
 }
 #strip-center .logo-container {
-  border: 1px solid;
-  width: 60px;
   height: 100%;
 }
 
+nav {
+  align-self: flex-end;
+  text-transform: uppercase;
+}
 nav a {
   font-size: 20px;
   color: #fff;
-  background-color: yellow;
+  background-color: seagreen;
   padding: 12px 20px;
   display: block;
 }
@@ -61,10 +72,10 @@ nav .sub-menu-2 {
   display: flex;
   flex-direction: column;
 }
-nav .sub-menu-1 :last-child,
-nav .sub-menu-2 :last-child {
+nav .sub-menu-2 {
   left: 100%;
   top: 141px;
+  width: max-content;
 }
 nav .sub-menu-1 > li:hover .sub-menu-2 {
   visibility: visible;
@@ -88,7 +99,7 @@ nav .sub-menu-1 > li:hover .sub-menu-2 {
 #strip-down img {
   width: 100%;
   height: 290px !important;
-  vertical-align: middle;
+  vertical-align: top;
 }
 #strip-down .slideshow-container {
   position: relative;
@@ -165,4 +176,61 @@ nav .sub-menu-1 > li:hover .sub-menu-2 {
 #strip-down .text {
     font-size: 11px;
   }
+}
+
+section {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+section main {
+  display: flex;
+  justify-content: space-between;
+  width: 894px;
+  height: 212px;
+}
+section main article {
+  width: 565px;
+  height: 100%;
+}
+section main aside {
+  width: 325px;
+  height: 100%;
+}
+section main aside img {
+  border-radius: 5px;
+}
+section article#destaques {
+  margin-top: 20px;
+  width: 894px;
+}
+section article#destaques #container-figures {
+  display: flex;
+  justify-content: space-between;
+}
+section article#destaques #container-figures figure {
+  width: 196px;
+  height: 163px;
+}
+section article#destaques #container-figures figure img {
+  border-radius: 5px;
+}
+
+footer {
+  margin-top: 20px;
+  background-color: seagreen;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+footer nav {
+  align-self: unset;
+}
+footer p {
+  margin-top: 20px;
+  color: #fff;
 }
