--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,7 +7,7 @@
 body {
     height: 100%;
     width: 100%;
-    
+
 }
 
 header {
@@ -15,6 +15,15 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+a {
+    text-decoration: none;
+}
+
+img {
+    width: 100%;
+    height: 100%;
 }
 
 #strip-top {
@@ -28,20 +37,21 @@ header {
     display: flex;
     justify-content: space-between;
     width: 894px;
-    height: 47px;
+    height: 96px;
 
     .logo-container {
-        border: 1px solid;
-        width: 60px;
         height: 100%;
     }
 }
 
 nav {
+    align-self: flex-end;
+    text-transform: uppercase;
+
     a {
         font-size: 20px;
         color: #fff;
-        background-color: yellow;
+        background-color: seagreen;
         padding: 12px 20px;
         display: block;
 
@@ -69,11 +79,12 @@ nav {
         position: absolute;
         display: flex;
         flex-direction: column;
+    }
 
-        :last-child {
-            left: 100%;
-            top: 141px;
-        }
+    .sub-menu-2 {
+        left: 100%;
+        top: 141px;
+        width: max-content;
     }
 
     .sub-menu-1>li:hover .sub-menu-2 {
@@ -92,7 +103,7 @@ nav {
     img {
         width: 100%;
         height: 290px !important;
-        vertical-align: middle;
+        vertical-align: top;
     }
 
     /* Slideshow container */
@@ -194,7 +205,71 @@ nav {
     }
 }
 
+section {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
+    main {
+        display: flex;
+        justify-content: space-between;
+        width: 894px;
+        height: 212px;
 
+        article {
+            width: 565px;
+            height: 100%;
+        }
 
+        aside {
+            width: 325px;
+            height: 100%;
 
+            img {
+                border-radius: 5px;
+            }
+        }
+    }
+
+    article#destaques {
+        margin-top: 20px;
+        width: 894px;
+
+        #container-figures {
+            display: flex;
+            justify-content: space-between;
+
+            figure {
+                width: 196px;
+                height: 163px;
+
+                img {
+                    border-radius: 5px;
+                }
+            }
+        }
+    }
+}
+
+footer {
+    margin-top: 20px;
+    background-color: seagreen;
+    height: 100px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    nav {
+        align-self: unset;
+    }
+
+    p {
+        margin-top: 20px;
+        color: #fff;
+    }
+
+}
