--- a/css/main.css
+++ b/css/main.css
@@ -26,8 +26,12 @@ img {
 }
 
 #strip-top {
+  display: flex;
+  justify-content: center;
+  align-self: center;
   height: 20px;
   width: 100%;
+  color: #fff;
   background-color: seagreen;
 }
 
@@ -35,7 +39,9 @@ img {
   margin: 10px 0 10px 0;
   display: flex;
   justify-content: space-between;
-  width: 894px;
+  max-width: 894px;
+  width: 100%;
+  min-width: 650px;
   height: 96px;
 }
 #strip-center .logo-container {
@@ -82,8 +88,8 @@ nav .sub-menu-1 > li:hover .sub-menu-2 {
 }
 
 #strip-down {
-  width: 894px !important;
-  height: 290px !important;
+  width: 894px;
+  height: 290px;
   /* Slideshow container */
   /* Next & previous buttons */
   /* Position the "next button" to the right */
@@ -195,6 +201,9 @@ section main article {
   width: 565px;
   height: 100%;
 }
+section main article h2 {
+  text-transform: uppercase;
+}
 section main aside {
   width: 325px;
   height: 100%;
@@ -213,9 +222,17 @@ section article#destaques #container-figures {
 section article#destaques #container-figures figure {
   width: 196px;
   height: 163px;
+  position: relative;
 }
 section article#destaques #container-figures figure img {
   border-radius: 5px;
+}
+section article#destaques #container-figures figure:hover {
+  opacity: 0.5;
+}
+section article#destaques #container-figures figure figcaption {
+  position: absolute;
+  display: none;
 }
 
 footer {
@@ -233,4 +250,44 @@ footer nav {
 footer p {
   margin-top: 20px;
   color: #fff;
+}
+
+@media screen and (max-width: 912px) {
+  #strip-down {
+    width: 100%;
+    height: 290px;
+  }
+
+  section main {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    height: max-content;
+  }
+  section main article {
+    width: 100%;
+    height: 100%;
+  }
+  section main article h2 {
+    text-transform: uppercase;
+  }
+  section main aside {
+    width: 100%;
+    height: 325px;
+  }
+  section main aside img {
+    border-radius: 5px;
+  }
+  section article#destaques {
+    width: 100%;
+  }
+  section article#destaques #container-figures {
+    flex-direction: column;
+  }
+  section article#destaques #container-figures figure {
+    width: 100% !important;
+    height: 250px;
+    margin-bottom: 20px;
+  }
 }
