--- a/css/main.css
+++ b/css/main.css
@@ -204,6 +204,9 @@ section main article {
 section main article h2 {
   text-transform: uppercase;
 }
+section main article p:first-child {
+  margin-top: 10px;
+}
 section main aside {
   width: 325px;
   height: 100%;
@@ -223,16 +226,32 @@ section article#destaques #container-figures figure {
   width: 196px;
   height: 163px;
   position: relative;
+  transition: 0.5s all;
 }
 section article#destaques #container-figures figure img {
   border-radius: 5px;
 }
-section article#destaques #container-figures figure:hover {
-  opacity: 0.5;
+section article#destaques #container-figures figure:hover img {
+  opacity: 0.4;
+}
+section article#destaques #container-figures figure:hover figcaption {
+  visibility: visible;
 }
 section article#destaques #container-figures figure figcaption {
+  visibility: hidden;
   position: absolute;
-  display: none;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+section article#destaques #container-figures figure figcaption .text {
+  background-color: rgba(4, 169, 109, 0.8);
+  color: white;
+  font-size: 16px;
+  padding: 16px 32px;
+  cursor: pointer;
 }
 
 footer {
@@ -259,28 +278,28 @@ footer p {
   }
 
   section main {
-    display: flex;
     flex-direction: column;
-    justify-content: space-between;
     width: 100%;
     height: max-content;
   }
   section main article {
     width: 100%;
-    height: 100%;
+    padding-left: 30px;
   }
-  section main article h2 {
-    text-transform: uppercase;
+  section main article p:first-child {
+    margin-top: 20px;
+    text-align: justify;
   }
   section main aside {
+    margin-top: 20px;
     width: 100%;
     height: 325px;
   }
-  section main aside img {
-    border-radius: 5px;
-  }
   section article#destaques {
     width: 100%;
+  }
+  section article#destaques h2 {
+    text-align: center;
   }
   section article#destaques #container-figures {
     flex-direction: column;
