--- a/sass/main.scss
+++ b/sass/main.scss
@@ -230,6 +230,13 @@ section {
             h2 {
                 text-transform: uppercase;
             }
+
+            p{
+
+            }
+            p:first-child{
+                margin-top: 10px;
+            }
         }
 
         aside {
@@ -254,23 +261,46 @@ section {
                 width: 196px;
                 height: 163px;
                 position: relative;
+                transition: .5s all;
 
                 img {
                     border-radius: 5px;
                 }
 
-                &:hover {
-                    opacity: 0.5;
+                &:hover img {
+                    opacity: 0.4;
+                }
+
+                &:hover figcaption {
+                    visibility: visible;
+
                 }
 
                 figcaption {
+
+                    visibility: hidden;
                     position: absolute;
-                    display: none;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    -ms-transform: translate(-50%, -50%);
+                    text-align: center;
+
+                    
+                    .text {
+
+                        background-color: rgb(4, 169, 109, .8);
+                        color: white;
+                        font-size: 16px;
+                        padding: 16px 32px;
+                        cursor: pointer;
+                      }
                 }
             }
         }
     }
 }
+
 
 footer {
     margin-top: 20px;
@@ -303,33 +333,34 @@ footer {
     section {
 
         main {
-            display: flex;
             flex-direction: column;
-            justify-content: space-between;
             width: 100%;
             height: max-content;
-    
+
             article {
                 width: 100%;
-                height: 100%;
-    
-                h2 {
-                    text-transform: uppercase;
+                padding-left: 30px;
+
+                p:first-child {
+                    margin-top: 20px;
+                    text-align: justify;
                 }
             }
-    
+
             aside {
+                margin-top: 20px;
                 width: 100%;
                 height: 325px;
-    
-                img {
-                    border-radius: 5px;
-                }
             }
         }
 
         article#destaques {
             width: 100%;
+
+            h2 {
+                text-align: center;
+            }
+
             #container-figures {
                 flex-direction: column;
 
