--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -7,6 +9,7 @@
 body {
   height: 100%;
   width: 100%;
+  font-family: "Poppins", sans-serif;
 }
 
 header {
@@ -18,6 +21,12 @@ header {
 
 a {
   text-decoration: none;
+}
+
+h2 {
+  font-family: "Roboto Slab", serif;
+  font-weight: 600;
+  text-transform: uppercase;
 }
 
 img {
@@ -106,6 +115,7 @@ nav .sub-menu-1 > li:hover .sub-menu-2 {
   width: 100%;
   height: 290px !important;
   vertical-align: top;
+  border-radius: 5px;
 }
 #strip-down .slideshow-container {
   position: relative;
@@ -186,6 +196,7 @@ nav .sub-menu-1 > li:hover .sub-menu-2 {
 
 section {
   margin-top: 20px;
+  height: max-content;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -201,11 +212,20 @@ section main article {
   width: 565px;
   height: 100%;
 }
-section main article h2 {
-  text-transform: uppercase;
+section main article hgroup {
+  font-family: "Roboto Slab", serif;
+}
+section main article h3 {
+  font-weight: 400;
+}
+section main article h4 {
+  font-weight: 300;
+}
+section main article p {
+  text-align: justify;
 }
 section main article p:first-child {
-  margin-top: 10px;
+  margin-top: 20px;
 }
 section main aside {
   width: 325px;
@@ -215,7 +235,6 @@ section main aside img {
   border-radius: 5px;
 }
 section article#destaques {
-  margin-top: 20px;
   width: 894px;
 }
 section article#destaques #container-figures {
@@ -255,7 +274,7 @@ section article#destaques #container-figures figure figcaption .text {
 }
 
 footer {
-  margin-top: 20px;
+  margin-top: 50px;
   background-color: seagreen;
   height: 100px;
   display: flex;
@@ -271,7 +290,7 @@ footer p {
   color: #fff;
 }
 
-@media screen and (max-width: 912px) {
+@media screen and (width: 912px) {
   #strip-down {
     width: 100%;
     height: 290px;
@@ -286,9 +305,11 @@ footer p {
     width: 100%;
     padding-left: 30px;
   }
+  section main article p {
+    text-align: justify;
+  }
   section main article p:first-child {
     margin-top: 20px;
-    text-align: justify;
   }
   section main aside {
     margin-top: 20px;
