--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
+
 * {
     padding: 0;
     margin: 0;
@@ -7,6 +10,7 @@
 body {
     height: 100%;
     width: 100%;
+    font-family: 'Poppins', sans-serif;
 }
 
 header {
@@ -18,6 +22,12 @@ header {
 
 a {
     text-decoration: none;
+}
+
+h2 {
+    font-family: 'Roboto Slab', serif;
+    font-weight: 600;
+    text-transform: uppercase;
 }
 
 img {
@@ -109,6 +119,7 @@ nav {
         width: 100%;
         height: 290px !important;
         vertical-align: top;
+        border-radius: 5px;
     }
 
     /* Slideshow container */
@@ -212,6 +223,7 @@ nav {
 
 section {
     margin-top: 20px;
+    height: max-content;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -227,21 +239,31 @@ section {
             width: 565px;
             height: 100%;
 
-            h2 {
-                text-transform: uppercase;
+            hgroup {
+                font-family: 'Roboto Slab', serif;
             }
 
-            p{
-
+            h3 {
+                font-weight: 400;
             }
-            p:first-child{
-                margin-top: 10px;
+
+            h4 {
+                font-weight: 300;
+            }
+
+            p {
+                text-align: justify;
+            }
+
+            p:first-child {
+                margin-top: 20px;
             }
         }
 
         aside {
             width: 325px;
             height: 100%;
+            
 
             img {
                 border-radius: 5px;
@@ -250,7 +272,6 @@ section {
     }
 
     article#destaques {
-        margin-top: 20px;
         width: 894px;
 
         #container-figures {
@@ -286,7 +307,7 @@ section {
                     -ms-transform: translate(-50%, -50%);
                     text-align: center;
 
-                    
+
                     .text {
 
                         background-color: rgb(4, 169, 109, .8);
@@ -294,16 +315,16 @@ section {
                         font-size: 16px;
                         padding: 16px 32px;
                         cursor: pointer;
-                      }
+                    }
                 }
             }
         }
-    }
+    }   
 }
+ 
 
-
-footer {
-    margin-top: 20px;
+footer{
+    margin-top: 50px;
     background-color: seagreen;
     height: 100px;
 
@@ -323,7 +344,7 @@ footer {
 
 }
 
-@media screen and (max-width: 912px) {
+@media screen and (width: 912px) {
 
     #strip-down {
         width: 100%;
@@ -341,9 +362,12 @@ footer {
                 width: 100%;
                 padding-left: 30px;
 
+                p {
+                    text-align: justify;
+                }
+
                 p:first-child {
                     margin-top: 20px;
-                    text-align: justify;
                 }
             }
 
