--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@ body {
   height: 100%;
   width: 100%;
   font-family: "Poppins", sans-serif;
+  min-width: 615px !important;
 }
 
 header {
@@ -89,7 +90,7 @@ nav .sub-menu-2 {
 }
 nav .sub-menu-2 {
   left: 100%;
-  top: 141px;
+  top: 162px;
   width: max-content;
 }
 nav .sub-menu-1 > li:hover .sub-menu-2 {
@@ -98,6 +99,7 @@ nav .sub-menu-1 > li:hover .sub-menu-2 {
 
 #strip-down {
   width: 894px;
+  min-width: 615px !important;
   height: 290px;
   /* Slideshow container */
   /* Next & previous buttons */
@@ -203,6 +205,7 @@ section {
   align-items: center;
 }
 section main {
+  min-width: 615px !important;
   display: flex;
   justify-content: space-between;
   width: 894px;
@@ -235,7 +238,9 @@ section main aside img {
   border-radius: 5px;
 }
 section article#destaques {
+  min-width: 615px !important;
   width: 894px;
+  margin-top: 50px;
 }
 section article#destaques #container-figures {
   display: flex;
@@ -274,6 +279,7 @@ section article#destaques #container-figures figure figcaption .text {
 }
 
 footer {
+  min-width: 615px !important;
   margin-top: 50px;
   background-color: seagreen;
   height: 100px;
@@ -290,7 +296,7 @@ footer p {
   color: #fff;
 }
 
-@media screen and (width: 912px) {
+@media screen and (max-width: 912px) {
   #strip-down {
     width: 100%;
     height: 290px;
